--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+@keyframes slideInFromUp {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+
+
 body {
 
 	background-image: url('img/background.jpg');
@@ -5,7 +16,8 @@ body {
 	background-repeat: no-repeat;
 	font-family: 'Open Sans', sans-serif;
 	color: white;
-	transition:all 0.3s ease;
+	animation: 0.7s ease-out 0s 1 slideInFromUp;
+	
 
 }
 
@@ -22,8 +34,11 @@ body {
 .profile {
 
 	width: 30%;
-	padding-left: 35%;
-	padding-top: 5%;
+	margin-top: 3%;
+	margin-left: 35%;
+	padding-left: 0%;
+	padding-top: 0%;
+	
 	
 
 	
