--- a/style.css
+++ b/style.css
@@ -39,14 +39,19 @@ h2 {
     
 }
 
+a {
+   display: table;
+}
+
 h3 {
     font-size: 1.75rem;
+        display: table;
 
 }
 
 h3:hover {
     background: yellow;
-    display: inline-block;
+
     padding-right: 1%;
     
 }
